fix project alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -424,6 +424,7 @@ footer{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: center;
         margin-bottom: 4rem;
         padding-top: 6vw;
 
